Tolto i codici extra non richiesti

--- a/index.html
+++ b/index.html
@@ -13,77 +13,34 @@
             rel="stylesheet">
 
     </head>
-    <body class="">
+    <body class="debug">
         <header class="nav">
-            <img src="./logo.png" alt="Logo Neori" class="logo">
             <div class="nav-options">
-                <span>FEATURES</span>
-                <span>EDITORIALS</span>
-                <span>ENVIRONMENT</span>
-                <span>BLOG</span>
-                <span>SHOP</span>
-                <span>CONTACT</span>
             </div>
-
         </header>
         <!-- /.nav -->
 
         <main class="article">
 
             <section class="hero">
-
             </section>
             <!-- /.hero -->
 
             <section class="topic">
-                <h2>Leadership</h2>
-                <p>Fertenum urna a libero tempus</p>
             </section>
             <!-- /.topic -->
 
             <section class="article-column clearfix">
 
                 <div class="column-left">
-                    <h4>Lorem</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Repellendus sed soluta asperiores
-                        placeat inventore assumenda minima nostrum, adipisci
-                        aliquam illo doloribus aspernatur vitae numquam,</p>
                 </div>
                 <!-- /.column-left -->
 
                 <div class="column-middle">
-                    <h4>Ipsum</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Harum, reiciendis fugit laboriosam laborum repellat
-                        corrupti adipisci ex quod possimus reprehenderit, quos
-                        voluptate. Illum alias ducimus at. Quam itaque, et
-                        veniam, ex praesentium ipsam culpa voluptate iure
-                        tempore voluptates officiis molestiae saepe
-                        necessitatibus dolore, soluta earum ullam ipsum
-                        consequatur accusamus ipsa? Optio exercitationem
-                        temporibus quisquam aperiam. Consectetur magni animi
-                        distinctio totam, incidunt amet! Beatae aperiam
-                        accusantium magni quos quaerat saepe odio enim rerum,
-                        cumque delectus consequuntur error? Voluptatibus sed
-                        delectus voluptas, cumque placeat suscipit
-                        reprehenderit! Ullam cumque veniam animi quis odit
-                        impedit, sed dolore est consectetur voluptate accusamus
-                        expedita totam aliquid! Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit. Dolor ex iste excepturi
-                        reiciendis esse eligendi obcaecati suscipit ea
-                        perferendis! Aliquam a aperiam voluptate voluptatem
-                    </p>
                 </div>
                 <!-- /.column-middle -->
 
                 <div class="column-right">
-                    <h4>Lorem</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        At error cum harum adipisci amet ullam in esse
-                        doloribus, modi pariatur, molestias, eum earum quod eius
-                        eveniet reprehenderit blanditiis facilis natus. Lorem
-                        ipsum dolor sit amet.</p>
                 </div>
                 <!-- /.column-right -->
 
@@ -95,7 +52,6 @@
         <!-- /.article -->
 
         <footer class="copywright">
-            <p>Designed with <span class="heart">&#9825;</span></p>
         </footer>
         <!-- /.copywright -->
     </body>
